--- a/css/main.css
+++ b/css/main.css
@@ -45,7 +45,7 @@ a {
 a:hover,
 a:focus {
   text-decoration: none;
-  color: #7a2d00;
+  color: #ff8b47;
 }
 .light {
   font-weight: 400;
@@ -55,6 +55,150 @@ a:focus {
   font-weight: 200;
   font-size: 80%;
   color: #b3b3b3;
+}
+.nav-tabs {
+  border-bottom: 1px solid #fff;
+  text-align: center;
+  margin-bottom: 2em;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.nav-tabs > li {
+  float: none;
+  display: inline-block;
+  *display: inline;
+  /* ie7 fix */
+  zoom: 1;
+  /* hasLayout ie7 trigger */
+  margin-right: 1em;
+}
+.nav-tabs > li > a {
+  border: none !important;
+  border-width: 0 !important;
+  color: #fff;
+  text-transform: uppercase;
+}
+.nav-tabs > li > a::after {
+  content: "";
+  background: #e05300;
+  height: 4px;
+  position: absolute;
+  width: 100%;
+  left: 0px;
+  bottom: -1px;
+  transition: all 100ms ease 0s;
+  transform: scale(0);
+}
+.nav-tabs > li.active > a,
+.nav-tabs > li > a:hover {
+  border: none;
+  color: #e05300 !important;
+  background: transparent !important;
+}
+.nav-tabs > li:hover > a::after,
+.nav-tabs > li.active > a::after {
+  transform: scale(1);
+}
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:focus,
+.nav-tabs > li.active > a:hover {
+  rder-width: 0 !important;
+}
+.light-section .nav-tabs {
+  border-bottom: 1px solid #000;
+}
+.light-section .nav-tabs > li > a {
+  color: #000;
+}
+.tab-content {
+  margin-bottom: 2em;
+}
+#chartdiv {
+  width: 100%;
+  height: 500px;
+  margin-bottom: 2em;
+}
+.intro {
+  display: table;
+  width: 100%;
+  height: 100%;
+  padding: 100px 0;
+  text-align: center;
+  color: white;
+  background-color: #000;
+  background-image: url("../img/subtle_bg/real_cf.png");
+  background-repeat: repeat !important;
+  background-attachment: fixed;
+}
+.intro .intro-body {
+  display: table-cell;
+  vertical-align: middle;
+  transition: opacity 1s;
+}
+@media (min-width: 768px) {
+  .intro .intro-body {
+    display: block;
+    position: absolute;
+    bottom: 55%;
+    left: 0;
+    right: 0;
+  }
+}
+.intro .intro-body .brand-heading {
+  font-size: 40px;
+}
+.intro .intro-body .intro-text h2 {
+  margin-bottom: 0.5em;
+  margin-left: 1em;
+}
+.intro .intro-body .intro-text h2 a,
+.intro .intro-body .intro-text h2 a:hover {
+  color: #fff !important;
+}
+.intro .intro-body .intro-text h2 a i.fa {
+  visibility: hidden;
+  margin-left: 0.3em;
+  color: #ff6b14;
+}
+.intro .intro-body .intro-text h2 a:hover i.fa {
+  visibility: visible;
+  -webkit-animation-name: pulse;
+  -moz-animation-name: pulse;
+  -webkit-animation-duration: 0.2s;
+  -moz-animation-duration: 0.2s;
+  -webkit-animation-iteration-count: 1;
+  -moz-animation-iteration-count: 1;
+  -webkit-animation-timing-function: linear;
+  -moz-animation-timing-function: linear;
+}
+.intro .intro-extra {
+  display: none;
+}
+@media (min-width: 768px) {
+  .intro {
+    background: url(../img/P1020492.jpg) no-repeat bottom center scroll;
+    box-shadow: inset 0px -75px 75px 0px #000000;
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    padding: 0;
+  }
+  .intro .intro-body .brand-heading {
+    font-size: 100px;
+  }
+  .intro .intro-extra {
+    padding: 15px;
+    display: block;
+    position: absolute;
+    bottom: 30px;
+    right: 0;
+    margin: 0;
+  }
+  .intro .intro-extra a,
+  .intro .intro-extra a:hover {
+    color: #fff;
+  }
 }
 .content-section {
   width: 100%;
@@ -149,70 +293,26 @@ a:focus {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   }
 }
-.intro {
-  display: table;
-  width: 100%;
-  height: 100%;
-  padding: 100px 0;
-  text-align: center;
-  color: white;
-  background-color: #000;
-  background-image: url("../img/subtle_bg/real_cf.png");
-  background-repeat: repeat !important;
-  background-attachment: fixed;
+.btn {
+  text-transform: uppercase;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  border-radius: 3px;
 }
-.intro .intro-body {
-  display: table-cell;
-  vertical-align: middle;
-  transition: opacity 1s;
+.btn-default {
+  border: 1px solid #e05300;
+  color: #e05300;
+  background-color: transparent;
 }
-@media (min-width: 768px) {
-  .intro .intro-body {
-    display: block;
-    position: absolute;
-    bottom: 55%;
-    left: 0;
-    right: 0;
-  }
-}
-.intro .intro-body .brand-heading {
-  font-size: 40px;
-}
-.intro .intro-body .intro-text {
-  font-size: 18px;
-}
-.intro .intro-extra {
-  display: none;
-}
-@media (min-width: 768px) {
-  .intro {
-    background: url(../img/P1020492.jpg) no-repeat bottom center scroll;
-    box-shadow: inset 0px -75px 75px 0px #000000;
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-    padding: 0;
-  }
-  .intro .intro-body .brand-heading {
-    font-size: 100px;
-  }
-  .intro .intro-body .intro-text {
-    font-size: 26px;
-  }
-  .intro .intro-extra {
-    padding: 15px;
-    display: block;
-    position: absolute;
-    bottom: 30px;
-    right: 0;
-    margin: 0;
-  }
-  .intro .intro-extra a,
-  .intro .intro-extra a:hover {
-    color: #fff;
-  }
+.btn-default:hover,
+.btn-default:focus {
+  border: 1px solid #e05300;
+  outline: none;
+  color: #fff;
+  background-color: #e05300;
 }
 .btn-circle {
   width: 70px;
@@ -250,45 +350,6 @@ a:focus {
   -webkit-animation-timing-function: linear;
   -moz-animation-timing-function: linear;
 }
-.btn {
-  text-transform: uppercase;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  border-radius: 3px;
-}
-.btn-default {
-  border: 1px solid #e05300;
-  color: #e05300;
-  background-color: transparent;
-}
-.btn-default:hover,
-.btn-default:focus {
-  border: 1px solid #e05300;
-  outline: none;
-  color: #fff;
-  background-color: #e05300;
-}
-ul.banner-social-buttons {
-  margin-top: 0;
-}
-@media (max-width: 1199px) {
-  ul.banner-social-buttons {
-    margin-top: 15px;
-  }
-}
-@media (max-width: 767px) {
-  ul.banner-social-buttons li {
-    display: block;
-    margin-bottom: 20px;
-    padding: 0;
-  }
-  ul.banner-social-buttons li:last-child {
-    margin-bottom: 0;
-  }
-}
 footer {
   padding: 50px 0;
 }
@@ -313,67 +374,6 @@ img::-moz-selection {
 }
 body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
-}
-.nav-tabs {
-  border-bottom: 1px solid #fff;
-  text-align: center;
-  margin-bottom: 2em;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-.nav-tabs > li {
-  float: none;
-  display: inline-block;
-  *display: inline;
-  /* ie7 fix */
-  zoom: 1;
-  /* hasLayout ie7 trigger */
-  margin-right: 1em;
-}
-.nav-tabs > li > a {
-  border: none !important;
-  border-width: 0 !important;
-  color: #fff;
-  text-transform: uppercase;
-}
-.nav-tabs > li > a::after {
-  content: "";
-  background: #e05300;
-  height: 4px;
-  position: absolute;
-  width: 100%;
-  left: 0px;
-  bottom: -1px;
-  transition: all 100ms ease 0s;
-  transform: scale(0);
-}
-.nav-tabs > li.active > a,
-.nav-tabs > li > a:hover {
-  border: none;
-  color: #e05300 !important;
-  background: transparent !important;
-}
-.nav-tabs > li:hover > a::after,
-.nav-tabs > li.active > a::after {
-  transform: scale(1);
-}
-.nav-tabs > li.active > a,
-.nav-tabs > li.active > a:focus,
-.nav-tabs > li.active > a:hover {
-  rder-width: 0 !important;
-}
-.light-section .nav-tabs {
-  border-bottom: 1px solid #000;
-}
-.light-section .nav-tabs > li > a {
-  color: #000;
-}
-.tab-content {
-  margin-bottom: 2em;
-}
-#chartdiv {
-  width: 100%;
-  height: 500px;
-  margin-bottom: 2em;
 }
 @-webkit-keyframes pulse {
   0 {
