--- a/less/main.less
+++ b/less/main.less
@@ -8,12 +8,12 @@ body {
   color: white;
   background-color: black;
 }
-
 html {
   width: 100%;
   height: 100%;
 }
 
+// Basic typography.
 h1, h2, h3, h4, h5, h6 {
   margin: 0 0 35px;
   text-transform: uppercase;
@@ -21,7 +21,6 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   letter-spacing: 1px;
 }
-
 p {
   margin: 0 0 25px;
   font-size: 18px;
@@ -35,7 +34,6 @@ p {
 .larger {
   font-size: 120% !important;
 }
-
 a {
   color: @primary;
   -webkit-transition: all .2s ease-in-out;
@@ -44,7 +42,7 @@ a {
   &:hover,
   &:focus {
     text-decoration: none;
-    color: darken(@primary, 20%);
+    color: lighten(@primary, 20%);
   }
 }
 .light {
@@ -57,6 +55,154 @@ a {
   color: darken(#fff, 30%);
 }
 
+// Main nav tabs styles.
+.nav-tabs {
+  border-bottom: 1px solid #fff;
+  text-align: center;
+  margin-bottom: 2em;
+  font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
+  & > li {
+    // Additional centering considerations.
+    float: none;
+    display: inline-block;
+    *display: inline; /* ie7 fix */
+    zoom: 1; /* hasLayout ie7 trigger */
+    margin-right: 1em;
+    & > a {
+      border: none !important;
+      border-width: 0 !important;
+      color: #fff;
+      text-transform: uppercase;
+    }
+    // Add bar space under tabs.
+    & > a::after {
+      content: "";
+      background: @primary;
+      height: 4px;
+      position: absolute;
+      width: 100%;
+      left: 0px;
+      bottom: -1px;
+      transition: all 100ms ease 0s; transform: scale(0);
+    }
+    // Ensure bar space is active for active items and is animated.
+    &.active > a,
+    & > a:hover {
+      border: none;
+      color: @primary !important;
+      background: transparent !important;
+    }
+    &:hover > a::after,
+    &.active > a::after {
+      transform: scale(1);
+    }
+  }
+  // Misc border cleanup.
+  & > li.active > a, > li.active > a:focus, > li.active > a:hover {
+ rder-width: 0 !important;
+  }
+}
+.light-section .nav-tabs {
+  border-bottom: 1px solid #000;
+  & > li > a {
+    color: #000;
+  }
+}
+.tab-content {
+  margin-bottom: 2em;
+}
+
+
+#chartdiv {
+	width: 100%;
+	height: 500px;
+  margin-bottom: 2em;
+}
+
+// Top intro styles.
+.intro {
+  display: table;
+  width: 100%;
+  height: 100%;
+  padding: 100px 0;
+  text-align: center;
+  color: white;
+  background-color: #000;
+  background-image: url("../img/subtle_bg/real_cf.png");
+  background-repeat: repeat !important;
+  background-attachment: fixed;
+  .intro-body {
+    display: table-cell;
+    vertical-align: middle;
+    transition: opacity 1s;
+    @media(min-width: @mobile-break) {
+      display: block;
+      position: absolute;
+      bottom: 55%;
+      left: 0;
+      right: 0;
+    }
+    .brand-heading {
+      font-size: 40px;
+    }
+    .intro-text {
+      h2 {
+        margin-bottom: 0.5em;
+        margin-left: 1em;
+        a, a:hover {
+          color: #fff !important
+        }
+        a i.fa {
+          visibility: hidden;
+          margin-left: 0.3em;
+          color: lighten(@primary, 10%);
+        }
+        a:hover i.fa {
+          visibility: visible;
+          -webkit-animation-name: pulse;
+          -moz-animation-name: pulse;
+          -webkit-animation-duration: 0.2s;
+          -moz-animation-duration: 0.2s;
+          -webkit-animation-iteration-count: 1;
+          -moz-animation-iteration-count: 1;
+          -webkit-animation-timing-function: linear;
+          -moz-animation-timing-function: linear;
+        }
+      }
+    }
+  }
+  .intro-extra {
+    display: none;
+  }
+  @media(min-width: @mobile-break) {
+    background: url(../img/P1020492.jpg) no-repeat bottom center scroll;
+    box-shadow: inset 0px -75px 75px 0px rgba(0,0,0,1);
+    background-attachment: fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    padding: 0;
+    .intro-body {
+      .brand-heading {
+        font-size: 100px;
+      }
+    }
+    .intro-extra {
+      padding: 15px;
+      display: block;
+      position: absolute;
+      bottom: 30px;
+      right: 0;
+      margin: 0;
+      a, a:hover {
+        color: #fff;
+      }
+    }
+  }
+}
+
+// Main section styles.
 .content-section {
   width: 100%;
   padding: 100px 0px;
@@ -76,6 +222,7 @@ a {
   background-color: #000;
 }
 
+// Navbar styles.
 .navbar-custom {
   margin-bottom: 0;
   border-bottom: 1px solid fade(white, 30%);
@@ -152,74 +299,29 @@ a {
   }
 }
 
-.intro {
-  display: table;
-  width: 100%;
-  height: 100%;
-  padding: 100px 0;
-  text-align: center;
-  color: white;
-  background-color: #000;
-  background-image: url("../img/subtle_bg/real_cf.png");
-  background-repeat: repeat !important;
-  background-attachment: fixed;
-  .intro-body {
-    display: table-cell;
-    vertical-align: middle;
-    transition: opacity 1s;
-    @media(min-width: @mobile-break) {
-      display: block;
-      position: absolute;
-      bottom: 55%;
-      left: 0;
-      right: 0;
-    }
-    .brand-heading {
-      font-size: 40px;
-    }
-    .intro-text {
-      font-size: 18px;
-    }
-  }
-  .intro-extra {
-    display: none;
-  }
-  @media(min-width: @mobile-break) {
-    background: url(../img/P1020492.jpg) no-repeat bottom center scroll;
-    box-shadow: inset 0px -75px 75px 0px rgba(0,0,0,1);
-    background-attachment: fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-    padding: 0;
-    .intro-body {
-      .intro-inner {
-        //box-shadow: 0px 0px 50px 50px rgba(0,0,0,0.3);
-        //background-color: rgba(0,0,0,0.3);
-        //border-radius: 10px;
-      }
-      .brand-heading {
-        font-size: 100px;
-      }
-      .intro-text {
-        font-size: 26px;
-      }
-    }
-    .intro-extra {
-      padding: 15px;
-      display: block;
-      position: absolute;
-      bottom: 30px;
-      right: 0;
-      margin: 0;
-      a, a:hover {
-        color: #fff;
-      }
-    }
-  }
+// Button styles
+.btn {
+  text-transform: uppercase;
+  font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: 400;
+  -webkit-transition: all .2s ease-in-out;
+  -moz-transition: all .2s ease-in-out;
+  transition: all .3s ease-in-out;
+  border-radius: 3px;
 }
 
+.btn-default {
+  border: 1px solid @primary;
+  color: @primary;
+  background-color: transparent;
+  &:hover,
+  &:focus {
+    border: 1px solid @primary;
+    outline: none;
+    color: #fff;
+    background-color: @primary;
+  }
+}
 .btn-circle {
   width: 70px;
   height: 70px;
@@ -260,46 +362,7 @@ a {
   }
 }
 
-.btn {
-  text-transform: uppercase;
-  font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-weight: 400;
-  -webkit-transition: all .2s ease-in-out;
-  -moz-transition: all .2s ease-in-out;
-  transition: all .3s ease-in-out;
-  border-radius: 3px;
-}
-
-.btn-default {
-  border: 1px solid @primary;
-  color: @primary;
-  background-color: transparent;
-  &:hover,
-  &:focus {
-    border: 1px solid @primary;
-    outline: none;
-    color: #fff;
-    background-color: @primary;
-  }
-}
-
-ul.banner-social-buttons {
-  margin-top: 0;
-  @media(max-width:1199px) {
-    margin-top: 15px;
-  }
-  @media(max-width:767px) {
-    li {
-      display: block;
-      margin-bottom: 20px;
-      padding: 0;
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
-  }
-}
-
+// Footer styles.
 footer {
   padding: 50px 0;
   p {
@@ -329,70 +392,6 @@ img::-moz-selection {
 
 body {
   webkit-tap-highlight-color: fade(white, 20%);
-}
-
-// Main nav tabs styles.
-.nav-tabs {
-  border-bottom: 1px solid #fff;
-  text-align: center;
-  margin-bottom: 2em;
-  font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
-  & > li {
-    // Additional centering considerations.
-    float: none;
-    display: inline-block;
-    *display: inline; /* ie7 fix */
-    zoom: 1; /* hasLayout ie7 trigger */
-    margin-right: 1em;
-    & > a {
-      border: none !important;
-      border-width: 0 !important;
-      color: #fff;
-      text-transform: uppercase;
-    }
-    // Add bar space under tabs.
-    & > a::after {
-      content: "";
-      background: @primary;
-      height: 4px;
-      position: absolute;
-      width: 100%;
-      left: 0px;
-      bottom: -1px;
-      transition: all 100ms ease 0s; transform: scale(0);
-    }
-    // Ensure bar space is active for active items and is animated.
-    &.active > a,
-    & > a:hover {
-      border: none;
-      color: @primary !important;
-      background: transparent !important;
-    }
-    &:hover > a::after,
-    &.active > a::after {
-      transform: scale(1);
-    }
-  }
-  // Misc border cleanup.
-  & > li.active > a, > li.active > a:focus, > li.active > a:hover {
- rder-width: 0 !important;
-  }
-}
-.light-section .nav-tabs {
-  border-bottom: 1px solid #000;
-  & > li > a {
-    color: #000;
-  }
-}
-.tab-content {
-  margin-bottom: 2em;
-}
-
-
-#chartdiv {
-	width: 100%;
-	height: 500px;
-  margin-bottom: 2em;
 }
 
 // Pulse animations (mainly for buttons).
